# elysium

./: .cursorignore  .cursorrules  .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  USAGE.md  ai_image_manipulation_thesis_hy.tex  during_rl_train.md  gemini_pro_plan.md  last-session-backup.md  left_midway.md  log  nohup.out  pyproject.toml  requirements.txt  session-backup.md  training_time_reduction.md
aaa/: a
configs/: instructions.yaml  instructions_backup1.yaml  train.yaml
data/interim/chunks/: bmw_car_20260413_051446.json  boat_20260413_052110.json  boat_20260516_015608.json  brad_pitt_20260512_213540.json  brad_pitt_20260516_012657.json  cannavaro_20260413_052924.json  cartoon_car_20260426_210836.json  david_silva_20260308_233838.json  del_piero_20260308_233931.json  doggy_20260413_053448.json  doggy_20260512_212127.json  doggy_20260516_013825.json  double_chin_20260422_005913.json  double_chin_20260512_223043.json  fishing_20260413_053723.json  (+50 more)
plans/: HANDOFF.md  architecture-roadmap.md
scripts/: eval_rl.py  infer.py  migrate_frames.py  plot_training.py  prepare_critic_data.py  prepare_data.py  rescale_images.py  tb_to_csv.py  train.py  train_critic.py
src/elysium/: __init__.py  log.py
src/elysium.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_action_coord_clamp.py  test_action_io.py  test_critic.py  test_critic_reward_wiring.py  test_instruction_weights.py  test_noop_loss_weight.py  test_rl_train_reward_import.py
tests/unit/: test_coord_tokens.py  test_reward.py
tools/: README.md  annotate.py  measure_seq_lengths.py  to_jpg.py
unsloth_compiled_cache/: UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py  unsloth_compiled_module_qwen2_5_vl.py  unsloth_compiled_module_qwen3_5.py  unsloth_compiled_module_siglip.py
(+158 files in other folders)
