[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elysium"
version = "0.1.0"
description = "AI-driven image manipulation via Vision-Language-Action model"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
