[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elysium"
version = "0.1.0"
description = "AI-driven image manipulation via Vision-Language-Action model"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.0",
    "pydantic>=2.4.0",
    "PyYAML>=6.0",
    "numpy>=1.26.0,<3",
    "Pillow>=10.0.0",
    "opencv-python-headless>=4.9.0.80",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]
annotate = [
    "pygame>=2.5.0",
]
train = [
    "torch>=2.4.0",
    "unsloth",
    "transformers>=4.46.0",
    "trl>=0.12.0",
    "datasets>=3.0.0",
    "peft>=0.13.0",
    "accelerate>=0.34.0",
    "huggingface_hub>=0.25.0",
    "safetensors>=0.4.0",
    "bitsandbytes>=0.44.0",
    "sentencepiece>=0.1.99",
    "einops>=0.7.0",
    "rdp>=0.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
